--- a/BachelorsProjectWebApp/BachelorsProjectWebApp.csproj
+++ b/BachelorsProjectWebApp/BachelorsProjectWebApp.csproj
@@ -205,6 +205,7 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Home\FindOffice.cshtml" />
+    <Content Include="Views\Home\EditPlan.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
