--- a/BachelorsProjectWebApp/BachelorsProjectWebApp.csproj
+++ b/BachelorsProjectWebApp/BachelorsProjectWebApp.csproj
@@ -128,6 +128,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\DataController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -135,7 +137,12 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\BeaconModel.cs" />
     <Compile Include="Models\DBMapper.cs" />
+    <Compile Include="Models\NavigationModel.cs" />
+    <Compile Include="Models\FloorModel.cs" />
+    <Compile Include="Models\OfficeModel.cs" />
+    <Compile Include="Models\TrackModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -217,6 +224,7 @@
     <Content Include="Views\Home\FindOffice.cshtml" />
     <Content Include="Views\Home\EditPlan.cshtml" />
     <Content Include="Views\Home\NavigationDemo.cshtml" />
+    <Content Include="Views\Home\UploadFloorPlan.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
