--- a/BachelorsProjectWebApp/BachelorsProjectWebApp.csproj
+++ b/BachelorsProjectWebApp/BachelorsProjectWebApp.csproj
@@ -228,7 +228,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Content\Images\" />
+    <Folder Include="Content\img\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
